--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,9 +21,9 @@ $regular-font-size: 1.25em; /* 20px / 16px = 1.25em; support text resizing in al
   Make sure to leave color-scheme in `_config.yml` file empty for granular control
 */
 
-$text-color: #454545;
-$heading-color: #404040;
-$link-color: #841212;
+$text-color: #100c01;
+$heading-color: #320E3B;
+$link-color: #604d79;
 
 @import "ed";
 @import "syntax";
